# poetry-demo

./: README.md  pyproject.toml
demo/: demo.py
