# install the current project use --no-root

[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26.0"
pandas = "*"
matplotlib = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
